5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1593_820.log
== SUBMITION (2019-03-28 23:02:05) 
-- CODE:
valor= int(input("valor do saque"))
notasR100 = valor//100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10
print(int(notasR100))
print(int(notasR50))
print(int(notasR10))

-- EXECUTION TIME:
0.158321
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
20
0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:03:53) 
-- CODE:
valor = int(input("qual o valor do saque"))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10
print(int(notasR100))
print(int(notasR50))
print(int(notasR10))

-- EXECUTION TIME:
0.146959
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
20
0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:08:49) 
-- CODE:
valor = float(input(" saque "))
notas_R50 = valor // 50
resto_R50 = valor% 50
resto_R10 = resto R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.173989
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 4
    resto_R10 = resto R50 % 10
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:09:23) 
-- CODE:
valor = float(input(" saque "))
notas_R50 = valor // 50
resto_R50 = valor% 50
resto_R10 = resto_R50 %10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.150553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/820/main.py", line 7, in <module>
    print(int(notas_R10))
NameError: name 'notas_R10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:10:58) 
-- CODE:
valor = float(input(" saque "))
notas_R50 = valor // 50
resto R50 = valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.134979
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 3
    resto R50 = valor % 50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:12:26) 
-- CODE:
valor = float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto R50 = valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.138758
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 3
    resto R50 = valor % 50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:13:43) 
-- CODE:
valor = float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto R50 = valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.175394
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 3
    resto R50 = valor % 50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:13:59) 
-- CODE:
valor=float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto R50 = valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))va
-- ERROR:
File "XXXX", line 3
    resto R50 = valor % 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:14:51) 
-- CODE:
valor=float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto_R50= valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))va
-- ERROR:
File "XXXX", line 8
    print(int(notas_R2))va
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:14:58) 
-- CODE:
valor=float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto_R50= valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(notas_R10))
NameError: name 'notas_R10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:17:30) 
-- CODE:
valor=float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto_R50= valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
notas_R10 = resto_R50 // 10
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:17:45) 
-- CODE:
valor=float(input("Qual o valor do saque "))
notas_R50 = valor // 50
resto_R50= valor % 50
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
notas_R10 = resto_R50 // 10
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.158824
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
